--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify - Ascolta la tua musica dove vuoi e come vuoi</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico">
@@ -32,7 +35,6 @@
                     <li><p class="title-playlist">Playlist</p></li>
                     <li><a href="#" class="crea-playlist">Crea Playlist</a></li>
                     <li><a href="#">Nome Playlist</a></li>
-                    <li><a href="#">nome Playlist</a></li>
                     <li><a href="#">Nome Playlist</a></li>
                     <li><a href="#">Nome Playlist</a></li>
                     <li><a href="#">Nome Playlist</a></li>
@@ -41,11 +43,13 @@
                     <li><a href="#">Nome Playlist</a></li>
                     <li><a href="#">Nome Playlist</a></li>
                     <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Ultima Playlist</a></li>
                 </ul>
             </div>
             <div class="user-navbar">
-                <p>Installa App</p>
-                <p>John Doe</p>
+                <a href="#" class="install-app">Installa App</a>
+                <hr>
+                <a href="#" class="user-logo">John Doe</a>
             </div>
         </section>
         
