--- a/index.html
+++ b/index.html
@@ -67,15 +67,93 @@
                     <li><a href="#">Scopri</a></li>
                 </ul>
             </div>
-            <div class="recently-played">
-                
-            </div>
-            <div class="created-for-user">
-
-            </div>
-            <div class="most-popular">
-
-            </div>
+            <section id="last-played">
+                <h2>Recently played</h2>
+                <ul class="cover-list menu-list">
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                </ul>
+            </section>
+            <section id="user">
+                <h2>Created for user</h2>
+                <ul class="cover-list menu-list">
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                </ul>
+            </section>
+            <section id="popular">
+                <h2>Most Popular</h2>
+                <ul class="cover-list menu-list">
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                    <li class="cover-box">
+                        <div class="box verde"></div>
+                    </li>
+                </ul>
+            </section>        
         </section>
     </main>
     <!-- /Corpo Principale -->
