Boxes Media Query

--- a/index.html
+++ b/index.html
@@ -71,28 +71,34 @@
                 <h2>Recently played</h2>
                 <ul class="cover-list menu-list">
                     <li class="cover-box">
-                        <div class="box verde"></div>
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <div class="box verde"></div>
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <div class="box verde"></div>
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <div class="box verde"></div>
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <div class="box verde"></div>
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
                     </li>
                 </ul>
             </section>
@@ -100,28 +106,14 @@
                 <h2>Created for user</h2>
                 <ul class="cover-list menu-list">
                     <li class="cover-box">
-                        <div class="box verde"></div>
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
                     </li>
                 </ul>
             </section>
@@ -129,28 +121,14 @@
                 <h2>Most Popular</h2>
                 <ul class="cover-list menu-list">
                     <li class="cover-box">
-                        <div class="box verde"></div>
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
-                    </li>
-                    <li class="cover-box">
-                        <div class="box verde"></div>
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
                     </li>
                 </ul>
             </section>        
