--- a/index.html
+++ b/index.html
@@ -76,34 +76,37 @@
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
-                        <h4>Heavy Metal</h4>
+                        <img src="img/sinister.jpeg" alt="Stranger Things">
+                        <h4>Stranger Things, Vol. 1 (A Netflix Original Series Soundtrack)</h4>
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
-                        <h4>Heavy Metal</h4>
+                        <img src="img/aquietplace.jpeg" alt="A quiet place">
+                        <h4>A quiet place</h4>
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
-                        <h4>Heavy Metal</h4>
+                        <img src="img/split.jpeg" alt="Spli">
+                        <h4>Split</h4>
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
-                        <h4>Heavy Metal</h4>
+                        <img src="img/cure.jpeg" alt="Cure">
+                        <h4>A cure for welliness</h4>
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
-                        <h4>Heavy Metal</h4>
+                        <img src="img/sinister.jpeg" alt="Sinister">
+                        <h4>Sinister</h4>
                         <p>Subtitle</p>
                     </li>
                 </ul>
             </section>
             <section id="user">
-                <h2>Created for user</h2>
+                <div class="text-user">
+                    <h2>Created for Kurkuit</h2>
+                    <p class="small">Pi&ugrave; ascolti, pi&ugrave; saranno accurati i suggerimenti</p>
+                </div>
                 <ul class="cover-list menu-list">
                     <li class="cover-box">
                         <img src="img/metal_lifting.jpg" alt="Metal">
@@ -118,15 +121,18 @@
                 </ul>
             </section>
             <section id="popular">
-                <h2>Most Popular</h2>
+                <div class="text-user">
+                    <h2>Artisti pi&ugrave; popolari</h2>
+                    <p class="small">Pi&ugrave; ascolti, pi&ugrave; saranno accurati i suggerimenti</p>
+                </div>
                 <ul class="cover-list menu-list">
                     <li class="cover-box">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <img class="circle" src="img/metal_lifting.jpg" alt="Metal">
                         <h4>Heavy Metal</h4>
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <img class="circle" src="img/metal_lifting.jpg" alt="Metal">
                         <h4>Heavy Metal</h4>
                         <p>Subtitle</p>
                     </li>
