--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="user-navbar">
                 <a href="#" class="install-app">Installa App</a>
                 <hr>
-                <a href="#" class="user-logo">John Doe</a>
+                <a href="#" class="user-logo">Kurkuit</a>
             </div>
         </section>
         
@@ -71,12 +71,22 @@
                 <h2>Recently played</h2>
                 <ul class="cover-list menu-list">
                     <li class="cover-box">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <div class="position-img">
+                            <img src="img/metal_lifting.jpg" alt="Metal">
+                            <div class="layover-img">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                        </div>
                         <h4>Heavy Metal</h4>
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/sinister.jpeg" alt="Stranger Things">
+                        <div class="position-img">
+                            <img src="img/metal_lifting.jpg" alt="Metal">
+                            <div class="layover-img">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                        </div>
                         <h4>Stranger Things, Vol. 1 (A Netflix Original Series Soundtrack)</h4>
                         <p>Subtitle</p>
                     </li>
@@ -109,14 +119,12 @@
                 </div>
                 <ul class="cover-list menu-list">
                     <li class="cover-box">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
-                        <h4>Heavy Metal</h4>
-                        <p>Subtitle</p>
+                        <img src="img/radar.jpeg" alt="Release radar">
+                        <h4>Release Radar</h4>
                     </li>
                     <li class="cover-box">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
-                        <h4>Heavy Metal</h4>
-                        <p>Subtitle</p>
+                        <img src="img/mixdaily.jpeg" alt="Daily Mix 1">
+                        <h4>Daily Mix 1</h4>
                     </li>
                 </ul>
             </section>
@@ -127,14 +135,12 @@
                 </div>
                 <ul class="cover-list menu-list">
                     <li class="cover-box">
-                        <img class="circle" src="img/metal_lifting.jpg" alt="Metal">
-                        <h4>Heavy Metal</h4>
-                        <p>Subtitle</p>
+                        <img class="circle" src="img/youg.jpeg" alt="Lana Del Rey">
+                        <h4>Lana Del Rey</h4>
                     </li>
                     <li class="cover-box">
-                        <img class="circle" src="img/metal_lifting.jpg" alt="Metal">
-                        <h4>Heavy Metal</h4>
-                        <p>Subtitle</p>
+                        <img class="circle" src="img/einaudi.jpeg" alt="Ludovico Einaudi">
+                        <h4>Ludovico Einaudi</h4>
                     </li>
                 </ul>
             </section>        
