--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </li>
                     <li class="cover-box">
                         <div class="position-img">
-                            <img src="img/metal_lifting.jpg" alt="Metal">
+                            <img src="img/stranger.jpeg" alt="Stranger Things">
                             <div class="layover-img">
                                 <i class="fas fa-play-circle"></i>
                             </div>
@@ -91,22 +91,42 @@
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/aquietplace.jpeg" alt="A quiet place">
+                        <div class="position-img">
+                            <img src="img/aquietplace.jpeg" alt="Quiet Place">
+                            <div class="layover-img">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                        </div>
                         <h4>A quiet place</h4>
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/split.jpeg" alt="Spli">
+                        <div class="position-img">
+                            <img src="img/split.jpeg" alt="Split">
+                            <div class="layover-img">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                        </div>
                         <h4>Split</h4>
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/cure.jpeg" alt="Cure">
+                        <div class="position-img">
+                            <img src="img/cure.jpeg" alt="Welliness">
+                            <div class="layover-img">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                        </div>
                         <h4>A cure for welliness</h4>
                         <p>Subtitle</p>
                     </li>
                     <li class="cover-box">
-                        <img src="img/sinister.jpeg" alt="Sinister">
+                        <div class="position-img">
+                            <img src="img/sinister.jpeg" alt="Sinister">
+                            <div class="layover-img">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                        </div>
                         <h4>Sinister</h4>
                         <p>Subtitle</p>
                     </li>
@@ -119,11 +139,21 @@
                 </div>
                 <ul class="cover-list menu-list">
                     <li class="cover-box">
-                        <img src="img/radar.jpeg" alt="Release radar">
+                        <div class="position-img">
+                            <img src="img/radar.jpeg" alt="Release">
+                            <div class="layover-img">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                        </div>
                         <h4>Release Radar</h4>
                     </li>
                     <li class="cover-box">
-                        <img src="img/mixdaily.jpeg" alt="Daily Mix 1">
+                        <div class="position-img">
+                            <img src="img/mixdaily.jpeg" alt="Daily Mix">
+                            <div class="layover-img">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                        </div>
                         <h4>Daily Mix 1</h4>
                     </li>
                 </ul>
@@ -135,11 +165,21 @@
                 </div>
                 <ul class="cover-list menu-list">
                     <li class="cover-box">
-                        <img class="circle" src="img/youg.jpeg" alt="Lana Del Rey">
+                        <div class="position-img">
+                            <img class="circle" src="img/youg.jpeg" alt="Young">
+                            <div class="layover-img circle">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                        </div>
                         <h4>Lana Del Rey</h4>
                     </li>
                     <li class="cover-box">
-                        <img class="circle" src="img/einaudi.jpeg" alt="Ludovico Einaudi">
+                        <div class="position-img">
+                            <img class="circle" src="img/einaudi.jpeg" alt="Einaudi">
+                            <div class="layover-img circle">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                        </div>
                         <h4>Ludovico Einaudi</h4>
                     </li>
                 </ul>
