--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <main>
 
         <section class="left-bar">
+
+            <!-- Hidden XS -->
             <div class="logo-navbar">
                 <img src="img/logo.svg" alt="Logo Spotify" class="logo">
             </div>
@@ -51,7 +53,27 @@
                 <hr>
                 <a href="#" class="user-logo">Kurkuit</a>
             </div>
+            <!-- Hidden XS -->
         </section>
+
+            <!-- Visible XS -->
+        <section class="left-bar-xs">
+            <div class="menu-navbar-xs">
+                <ul>
+                    <li><img src="img/logo-small.svg" alt="Logo Spotify" class="logo"></li>
+                    <li><a href="#"><img src="img/home.svg" alt="Home"></a></li>
+                    <li><a href="#"><img src="img/search.svg" alt="Cerca"></a></li>
+                    <li><a href="#"><img src="img/libreria.svg" alt="Libreria"></a></li>
+                </ul>
+            </div>
+            <div class="user-navbar-xs">
+                <ul>
+                    <li><a href="#" class="install-app"><i class="fas fa-arrow-circle-down"></i></a></li>
+                    <li><a href="#" class="user-logo"><i class="fas fa-user-circle"></i></a></li>
+                </ul>
+            </div>
+        </section>
+            <!-- Visible XS -->
         
         <section class="main-content">
             <div class="call-to-action">
